<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:flow_horizontalAlign="center"
    tools:context=".MainActivity2">

    <TextView

        android:id="@+id/calorie_title"

        android:layout_width="252dp"
        android:layout_height="34dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:text="@string/calorie_calculator"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/ageInput"
        android:layout_width="211dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Age"
        android:inputType="numberSigned"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calorie_title" />

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="209dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Weight (lbs)"
        android:inputType="numberSigned"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageInput" />

    <EditText
        android:id="@+id/heightFt"
        android:layout_width="97dp"
        android:layout_height="39dp"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="Height (ft)"
        android:inputType="numberSigned"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightInput" />

    <TextView
        android:id="@+id/calResult"
        android:layout_width="244dp"
        android:layout_height="27dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="10sp"
        android:text="Suggested Caloric Intake"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcBtn" />

    <Button
        android:id="@+id/calcBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/mfGroup"
        android:layout_width="123dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightFt">

        <RadioButton
            android:id="@+id/maleButton"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:text="Male" />

        <RadioButton
            android:id="@+id/femaleButton"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:text="Female" />
    </RadioGroup>

    <EditText
        android:id="@+id/heightIn"
        android:layout_width="106dp"
        android:layout_height="39dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:ems="10"
        android:hint="(in)"
        android:inputType="numberSigned"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toEndOf="@+id/heightFt"
        app:layout_constraintTop_toBottomOf="@+id/weightInput" />

    <RadioGroup
        android:id="@+id/exerciseGroup"
        android:layout_width="362dp"
        android:layout_height="115dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mfGroup">

        <RadioButton
            android:id="@+id/inactiveButton"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:text="Inactive: Little to no exercise" />

        <RadioButton
            android:id="@+id/lightButton"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:text="Light Activity: Exercise 1 - 3 days per week" />

        <RadioButton
            android:id="@+id/moderateButton"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:text="Moderate Activity: Exercise most days" />

        <RadioButton
            android:id="@+id/heavyButton"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:text="Heavy Activity: Rigorous exercise most or all days" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="355dp"
        android:layout_height="87dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseGroup">

        <RadioButton
            android:id="@+id/loseButton"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:text="Goal: Lose Weight (appx. -1lb/week)" />

        <RadioButton
            android:id="@+id/maintainButton"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:text="Goal: Maintain Weight (appx. 0lb/week)" />

        <RadioButton
            android:id="@+id/gainButton"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:text="Goal: Gain Weight (appx. +1lb/week)" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>