<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_icon"
        android:title="Home"
        android:icon="@drawable/home_icon"/>

    <item
        android:id="@+id/calorie_icon"
        android:title="Calories"
        android:icon="@drawable/calorie_icon"/>

    <item
        android:id="@+id/settings_icon"
        android:title="Settings"
        android:icon="@drawable/settings_icon"/>

</menu>